Fix link wrapping

--- a/src/App.css
+++ b/src/App.css
@@ -42,5 +42,6 @@
 }
 
 .contact-link {
-  padding-right: 0.8rem;
+  padding-right: 1.0rem;
+  white-space: nowrap;
 }
